# Gold

./: CMakeLists.txt  db.cc  main.cc
Gold/: main.cpp
Gold.xcodeproj/: project.pbxproj
Header/: AccountSummaryTags.h  AvailableAlgoParams.h  CommissionReport.h  CommonDefs.h  Contract.h  ContractCondition.h  ContractSamples.h  DefaultEWrapper.h  DepthMktDataDescription.h  EClient.h  EClientMsgSink.h  EClientSocket.h  EDecoder.h  EMessage.h  EMutex.h  EPosixClientSocketPlatform.h  EReader.h  EReaderOSSignal.h  EReaderSignal.h  ESocket.h  ETransport.h  EWrapper.h  EWrapper_prototypes.h  Execution.h  FAMethodSamples.h  FamilyCode.h  HistogramEntry.h  HistoricalTick.h  HistoricalTickBidAsk.h  HistoricalTickLast.h  IExternalizable.h  MarginCondition.h  NewsProvider.h  OperatorCondition.h  Order.h  OrderCondition.h  OrderSamples.h  OrderState.h  PercentChangeCondition.h  PriceCondition.h  (+14 more)
Python/: mysql.py
Source/: AccountSummaryTags.cc  AvailableAlgoParams.cc  ContractCondition.cc  ContractSamples.cc  DefaultEWrapper.cc  EClient.cc  EClientSocket.cc  EDecoder.cc  EMessage.cc  EMutex.cc  EReader.cc  EReaderOSSignal.cc  ESocket.cc  Main.cc  MarginCondition.cc  OperatorCondition.cc  OrderCondition.cc  OrderSamples.cc  PercentChangeCondition.cc  PriceCondition.cc  ScannerSubscriptionSamples.cc  SoftDollarTier.cc  StdAfx.cc  TestCppClient.cc  TimeCondition.cc  Utils.cc  VolumeCondition.cc  executioncondition.cc
database/: step1.cpp  step2.cpp  step3.cpp  step4.cpp  step5.cpp  step6.cpp  step7.cpp
include/: TestCppClient.h  backtest.h  database.h
source/: Main.cc  (+3 more)
(+2 files in other folders)
